--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
-"PO-Revision-Date: 2025-04-04 14:15+0000\n"
+"PO-Revision-Date: 2025-04-12 04:25+0000\n"
 "Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
 "Language-Team: French <https://translation.chamilo.org/projects/chamilo/"
 "messages/fr/>\n"
@@ -110,7 +110,14 @@ msgid "Hyperbolic arccotangent:\t\tarccoth(x)"
 msgstr "Arccotangente hyperbolique:\t\tarccoth(x)"
 
 msgid "In order for this site to work and be able to measure the use of content, this platform uses cookies.<br /><br />\nIf needed, the Help section of your browser indicates how to configure cookies.<br /><br />\nFor more information on cookies, you can visit the <a href=\"http://www.aboutcookies.org/\">About Cookies</a> website."
-msgstr "Dans un soucis de bon fonctionnement et de mesure de fréquentation de la plateforme, Chamilo utilise les cookies.<br/><br/>Au besoin, la rubrique « Aide » des navigateurs vous indique comment paramétrer les cookies.<br/><br/>Pour plus d'informations sur les cookies, visitez le site de la <a href='http://www.cnil.fr/vos-obligations/sites-web-cookies-et-autres-traceurs/que-dit-la-loi/' target='_blank'>CNIL</a>."
+msgstr ""
+"Dans un soucis de bon fonctionnement et de mesure de fréquentation de la "
+"plateforme, Chamilo utilise les cookies.<br /><br />\n"
+"Au besoin, la rubrique « Aide » des navigateurs vous indique comment "
+"paramétrer les cookies.<br /><br />\n"
+"Pour plus d'informations sur les cookies, visitez le site de la <a href="
+"\"http://www.cnil.fr/vos-obligations/sites-web-cookies-et-autres-traceurs/"
+"que-dit-la-loi/\" target=\"_blank\">CNIL</a>."
 
 msgid "By continuing to use this site, you declare you accept its use of cookies."
 msgstr "En continuant votre navigation sur ce site, vous acceptez l’utilisation des cookies."
@@ -381,7 +388,9 @@ msgid "Session name"
 msgstr "Nom de la session"
 
 msgid "Mobile phone number is incomplete or contains invalid characters"
-msgstr "Le numéro de téléphone portable que vous avez indiqué est incomplet ou contient des caractères non valides."
+msgstr ""
+"Le numéro de téléphone portable que vous avez indiqué est incomplet ou "
+"contient des caractères non valides"
 
 msgid "Include the country dial code"
 msgstr "Inclure le préfixe d'appels du pays"
@@ -402,7 +411,7 @@ msgid "Add me as coach"
 msgstr "M'ajouter comme coach"
 
 msgid "Add me as teacher in the imported courses."
-msgstr "Ajoutez-moi tant que professeur dans les cours"
+msgstr "M'ajouter en tant que professeur dans les cours importés"
 
 msgid "Progress of exercises taken by the student"
 msgstr "Progrès des exercices passés par l'étudiant"
@@ -3336,9 +3345,8 @@ msgstr "Prénom de l'administrateur"
 msgid "Administrator login"
 msgstr "Identifiant de l'administrateur"
 
-#, fuzzy
 msgid "Project manager"
-msgstr "Responsable du contenu"
+msgstr "Chef de projet"
 
 msgid "Your portal name"
 msgstr "Nom du campus"
